--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,8 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  height: 100%;
+  width: 100%;
+}
 body{
   background-color: rgb(42,66,38);
+  height: 100%;
+  width: 100%;
 }
 header{
   background-color: rgb(245,240,221);
@@ -47,6 +53,6 @@ main{
   width: 1400px;
   margin: 0 auto;
   margin-bottom: 10px;
-  height: 88vh;
+  height: 88%;
   background-color: rgb(245,240,221);
 }
