--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,13 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-html{
-  height: 100%;
-  width: 100%;
-}
 body{
   background-color: rgb(42,66,38);
-  height: 100%;
   width: 100%;
 }
 header{
@@ -18,7 +13,6 @@ header{
   margin-top: 15px;
   height: 50px;
   width: 1400px;
-  display: flex;
 }
 /* 상단 사진 img */
 #headimg{
@@ -27,17 +21,21 @@ header{
   margin: 5px 20px 0 40px;
   width: 150px;
   height: 45px;
+  float: left;
+}
+header #menu{
+  float: left;
 }
 
 /* 상단 메뉴nav 전체 */
-nav ul li{
+header nav ul li{
   display: inline-block;
   color: rgb(42,66,38);
-  padding: 20px 10px;
+  padding: 20px 5px;
   font-size: 15px;
   font-weight: bold;
 }
-nav a{
+header nav a{
   margin: 0 25px;
 }
 
@@ -53,6 +51,6 @@ main{
   width: 1400px;
   margin: 0 auto;
   margin-bottom: 10px;
-  height: 88%;
+  height: 88vh;
   background-color: rgb(245,240,221);
 }
