--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,6 +10,7 @@ body{
 header{
   margin: 0 auto;
   margin-top: 15px;
+  margin-bottom: 30px;
   height: 50px;
   width: 1400px;
   display: flex;
@@ -52,20 +53,37 @@ header nav a{
 main{
   width: 1400px;
   margin: 0 auto;
-  margin-bottom: 10px;
   height: 88vh;
   display: flex;
+  flex-flow: row;
 }
 #leftmain{
+  padding: 80px;
   width: 700px;
+  float: left;
+ }
+ #leftmain h1{
+  text-align: right;
+  font-size: 80px;
+  width: 600px;
+ }
+ #leftmain p{
+  width: 600px;
+  text-align: right;
+ }
+
+ #leftmain #textbox{
+  margin-top: 50px;
+  margin-left: 30px;
+  width: 600px;
+  height: 200px;
+  background-color: rgb(42,66,38);
+  border-radius: 30px;
  }
  #rightmain{
-  position: relative;
   width: 700px;
  }
  #rightmain img{
-  position: absolute;
-  top:20%;
    width: 600px;
    height:500px;
  }
