--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,7 +10,7 @@ body{
 header{
   margin: 0 auto;
   margin-top: 15px;
-  margin-bottom: 30px;
+  margin-bottom: 5%;
   height: 50px;
   width: 1400px;
   display: flex;
