--- a/CSS/main.css
+++ b/CSS/main.css
@@ -50,6 +50,12 @@ header nav a{
   font-size: 15px;
   font-weight: bold;
 }
+/* 여기까지 긇어서 쓰세요 */
+
+
+
+
+/* 가운데 메인 */
 main{
   width: 1400px;
   margin: 0 auto;
