--- a/CSS/main.css
+++ b/CSS/main.css
@@ -97,10 +97,17 @@ main{
   text-decoration: none;
   width: 170px;
   height: 90px;
+  background-color: rgb(42,66,38);
+  color: rgb(12, 11, 6);
+  border-radius: 20px;
+ }
+ #login{
+  line-height: 90px;
+  text-align: center;
   width: 170px;
   height: 90px;
   background-color: rgb(42,66,38);
-  color: rgb(12, 11, 6);
+  color: rgb(245,240,221);
   border-radius: 20px;
  }
 
@@ -116,3 +123,48 @@ main{
    width: 600px;
    height:500px;
  }
+ #modal {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  /* display: none; */
+}
+form {
+  border-radius: 20px;
+  background-color: white;
+  width: 400px;
+  height: 200px;
+  padding: 10px;
+  border: 3px solid rgb(42,66,38);
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+  line-height: 40px;
+}
+label{
+  text-align: right;
+  display: inline-block;
+  width: 100px;
+}
+form h3{
+  margin-left: 10px;
+}
+form input{
+  height: 25px;
+  margin-top: 10px;
+  margin-left: 30px;
+  width: 200px;
+}
+form #twobtn{
+  margin-top: 15px;
+  margin-right: 10px;
+  text-align: right;
+}
+form #twobtn button{
+  width: 80px;
+  height: 25px;
+}
