--- a/CSS/main.css
+++ b/CSS/main.css
@@ -130,13 +130,13 @@ main{
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  /* display: none; */
+  display: none;
 }
 form {
   border-radius: 20px;
   background-color: white;
-  width: 400px;
-  height: 200px;
+  width: 500px;
+  height: 250px;
   padding: 10px;
   border: 3px solid rgb(42,66,38);
   position: absolute;
@@ -151,16 +151,18 @@ label{
   width: 100px;
 }
 form h3{
-  margin-left: 10px;
+  margin-top: 10px;
+  margin-left: 15px;
+  font-size: 30px;
 }
 form input{
   height: 25px;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-left: 30px;
-  width: 200px;
+  width: 300px;
 }
 form #twobtn{
-  margin-top: 15px;
+  margin-top: 30px;
   margin-right: 10px;
   text-align: right;
 }
