--- a/CSS/main.css
+++ b/CSS/main.css
@@ -17,13 +17,19 @@ header{
   display: flex;
 }
 /* 상단 사진 img */
-#headimg{
+/* #headimg{
   background: url("../image/mainhead.png") no-repeat;
   background-size: 100% 100%;
   margin: 5px 20px 0 40px;
   width: 150px;
   height: 45px;
-}
+} */
+ header h1{
+  margin-top: 3px;
+  font-family: 'dadoc';
+  color: white;
+  text-shadow: -3px 0 rgb(42,66,38), 0 3px  rgb(42,66,38), 3px 0  rgb(42,66,38), 0 -3px  rgb(42,66,38);
+ }
 
 /* 상단 메뉴nav 전체 */
 header nav a{
@@ -40,7 +46,7 @@ header nav a{
 #menu ul li{
   display: inline-block;
   color: rgb(42,66,38);
-  padding: 20px 5px;
+  padding: 20px 25px;
   font-size: 15px;
   font-weight: bold;
 }
@@ -51,84 +57,90 @@ header nav a{
   font-size: 15px;
   font-weight: bold;
 }
+#sidetap ul{
+  width: 300px;
+  text-align: right;
+}
 /* 여기까지 긇어서 쓰세요 */
 
 
 
 @font-face {
   font-family: 'mainword';
+  src: url('GmarketSansTTFLight.ttf') format('truetype');
+  font-family: 'mainbold';
+  src: url('GmarketSansTTFBold.ttf') format('truetype');
+  font-family: 'mainmedium';
+  src: url('GmarketSansTTFMedium.ttf') format('truetype');
+  font-family: 'dadoc';
   src: url('Binggrae-Bold.ttf') format('truetype');
+
 }
 
 /* 가운데 메인 */
+/* left right 자리 바뀌어있음 볼 때 참고 */
 main{
   width: 1400px;
   margin: 0 auto;
   display: flex;
-  flex-flow: row;
+  flex-flow: row-reverse;
   height: 75vh;
 }
 #leftmain{
-  padding: 80px;
+  padding: 30px;
+  padding-top: 0px;
   width: 700px;
-  float: left;
  }
  #leftmain h1{
-  font-family:'mainword';
-  text-align: right;
+  font-family:'mainmedium';
+  text-align: left;
   font-size: 90px;
   width: 600px;
  }
  #leftmain p{
+  opacity: 0.6;
   font-family:'mainword';
+  line-height: 30px;
+  margin-top: 30px;
   width: 600px;
-  text-align: right;
+  text-align: left;
  }
-
- #leftmain #textbox{
-  width: 600px;
-  height: 200px;
-  border-radius: 30px;
+ #dogcard{
   display: flex;
-  align-items:end;
- }
- #login{
-  margin-left: auto;
- }
- #signin{
-  margin-left: 20px;
- }
- #textbox a{
-  line-height: 90px;
+  background: rgba(255,255,255,0.6);
+  margin-right: 30px;
+  margin-top: 90px;
+  border-radius: 30px;
   text-align: center;
-  text-decoration: none;
-  width: 170px;
-  height: 90px;
-  background-color: rgb(42,66,38);
-  color: rgb(12, 11, 6);
-  border-radius: 20px;
- }
- #login{
-  line-height: 90px;
-  text-align: center;
-  width: 170px;
-  height: 90px;
-  background-color: rgb(42,66,38);
-  color: rgb(245,240,221);
-  border-radius: 20px;
  }
 
- #textbox a:visited{
-  text-decoration: none;
-  color: rgb(245,240,221);
+ #dogcard .card{
+  width: 200px;
+  height: 290px;
+  margin-top: 30px;
+  margin-left: 4px;
+}
+ #dogcard .card img{
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
  }
+ #dogcard .card ul{
+  margin-top: 20px;
+  list-style: none;
+  margin-left: 20px;
+  text-align: left;
+  line-height: 25px;
+  font-size: 14px;
+}
 
  #rightmain{
   width: 700px;
  }
  #rightmain img{
+  border-radius: 30px;
    width: 600px;
-   height:500px;
+   height:600px;
  }
  #modal {
   position: absolute;
