--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family:'mainlight';
 }
 body{
   width: 100%;
@@ -106,7 +105,7 @@ main{
 
 /* 다독이다 메인글씨 */
  #rightmain h1{
-  font-family:'mainmedium';
+  font-family:'mainbold';
   text-align: left;
   font-size: 90px;
   width: 600px;
