--- a/CSS/adopt.css
+++ b/CSS/adopt.css
@@ -107,12 +107,16 @@ body {
 }
 /* 보호중 */
 .ch {
+  width: 1400px;
+  margin: 0 auto;
   text-align: center;
   font-size: xx-large;
 }
 
 /* p문구 */
 .hc {
+  width: 1400px;
+  margin: 0 auto;
   text-align: center;
   font-size: x-large;
   color: rgb(42,66,38);
@@ -120,6 +124,8 @@ body {
 }
 
 .hcc {
+  width: 1400px;
+  margin: 0 auto;
   text-align: center;
   font-size: x-large;
   color: rgb(42,66,38);
@@ -129,7 +135,6 @@ body {
 .jeejum {
   padding: 5px;
   text-align: center;
-  
 }
 /* 체크박스 테두리 */
 .container {
@@ -139,11 +144,11 @@ body {
   background-color: rgb(245, 240, 221);
   border-radius: 8px;
   text-align: center;
-  max-width: 770px; /* 최대 너비 설정 */
+  width: 1400px; /* 최대 너비 설정 */
 }
 
 hr {
-  width: 1350px; /* 원하는 길이로 조절 */
+  width: 1450px; /* 원하는 길이로 조절 */
   margin: 20px auto;
   
 }
@@ -162,12 +167,14 @@ hr {
 /* 체크 박스 스타일 */
 .filter-box input[type="checkbox"] {
   margin-right: 5px; /* 체크 박스 오른쪽 마진 조정 */
+  width: 20px;
+  height: 20px;
 }
 
 /* 레이블 스타일 */
 .filter-box label {
   display: inline-block; /* 레이블을 인라인 블록 요소로 설정 */
-  
+  width: 120px;
   margin-left: 5px; /* 체크 박스와 텍스트 사이 마진 조정 */
   font-size: x-large;
 }
@@ -181,14 +188,14 @@ hr {
   align-items: flex-start; /* 세로 시작점 정렬 */
   padding: 20px 0; /* 위아래 여백 조정 */
   gap: 20px; /* 요소 사이 간격 조정 */
-  flex-wrap: wrap; /* 요소들이 여러 줄에 걸쳐 정렬되도록 설정 */
+  flex-wrap: nowrap; /* 요소들이 여러 줄에 걸쳐 정렬되도록 설정 */
 }
 /* 그리드 위치 조정 */
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(310px, 280px)); /* 자동으로 너비 조정 */
+  grid-template-columns: repeat(4, 310px); /* 자동으로 너비 조정 */
   gap: 20px; /* 그리드 사이의 간격 조정 */
-  max-width: 1300px; /* 최대 너비 설정 */
+  width: 1340px; /* 최대 너비 설정 */
   margin: 0 auto; /* 수평 가운데 정렬 */
   /* justify-content: space-around; */
   padding: 20px;
