--- a/CSS/adopt.css
+++ b/CSS/adopt.css
@@ -1,7 +1,6 @@
  *{
   margin: 0;
   padding: 0;
-
 }
 
 /* 폰트 */
@@ -111,6 +110,7 @@ body {
   margin: 0 auto;
   text-align: center;
   font-size: xx-large;
+  font-family: "mainmedium";
 }
 
 /* p문구 */
@@ -120,7 +120,7 @@ body {
   text-align: center;
   font-size: x-large;
   color: rgb(42,66,38);
-  /* font-weight: bold; */
+  font-family: "mainlight";
 }
 
 .hcc {
@@ -129,15 +129,20 @@ body {
   text-align: center;
   font-size: x-large;
   color: rgb(42,66,38);
-  /* font-weight: bold;   */
+  font-family: "mainlight";
+}
+.hcc b{
+  font-family: "mainmedium";
 }
 
 .jeejum {
   padding: 5px;
   text-align: center;
+  font-family: "mainmedium";
 }
 /* 체크박스 테두리 */
 .container {
+  font-family: "mainlight";
   border: 1px dotted rgb(42,66,38);
   margin: 15px auto; /* 위아래 여백 15px, 좌우 여백은 auto로 설정하여 가운데 정렬 */
   padding: 15px;
@@ -212,8 +217,6 @@ hr {
   transition: transform 0.3s ease;
   border-radius: 10px; /* 둥글게 */
   box-sizing: border-box; /* 패딩과 테두리가 요소의 너비에 포함되도록 설정합니다. */
-  
-
 }
 
 
@@ -246,6 +249,7 @@ hr {
   width: auto;
   font-size: 18px;
   background-color: rgb(245, 240, 221);
+  font-family: "mainmedium";
 }
 
 /* 왼쪽 오른쪽 버튼 */
