--- a/CSS/map.css
+++ b/CSS/map.css
@@ -286,19 +286,24 @@ th {
 /* 페이지 버튼 모양 */
 #pagination button {
   border: none;
-  background-color: #fc91347e;
   border-radius: 30%;
   padding: 8px 16px;
   font-size: 16px;
   font-family: 'mainmedium';
   cursor: pointer;
-  opacity: 0.5;
+  background-color: #fc91347e;
+  color: white; 
 }
 /* 선택한 페이지 버튼 색 */
-#pagination button:disabled {
+#pagination button.selected {
+  cursor: default;
+  font-weight: bold;
   opacity: 1;
   font-weight: bold;
-  color: #000;
+  background-color: orange;
+}
+#pagination button:disabled {
+  opacity: 0.3;
 }
 /* 지도 커서 모양 */
 path:hover{
