--- a/CSS/adopt.css
+++ b/CSS/adopt.css
@@ -242,11 +242,10 @@ hr {
   color: inherit;
   height: auto;
 }
-
 .gallery-item figcaption {
   padding: 10px;
   text-align: center;
-  width: auto;
+  width: 300px;
   font-size: 18px;
   background-color: rgb(245, 240, 221);
   font-family: "mainmedium";
@@ -321,6 +320,9 @@ hr {
   background-color: goldenrod;
 }
 
+form{
+  display: none;
+}
 
 
 
