--- a/CSS/adopt2.css
+++ b/CSS/adopt2.css
@@ -85,6 +85,7 @@ header nav a{
   text-align: right;
 }
 img{
-  width: 300px;
-  height: 300px;
+  object-fit: cover;
+  width: 310px;
+  height: 280px;
 }
