--- a/CSS/adopt2.css
+++ b/CSS/adopt2.css
@@ -33,7 +33,7 @@ body{
 header{
   margin: 0 auto;
   margin-top: 15px;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
   height: 50px;
   width: 1400px;
   display: flex;
@@ -84,8 +84,104 @@ header nav a{
   width: 300px;
   text-align: right;
 }
-img{
+#dogImage img{
   object-fit: cover;
-  width: 310px;
-  height: 280px;
+  width: 546px;
+  height: 596px;
+  border-radius: 20px;
+}
+main{
+  width: 1400px;
+  margin: 0 auto;
+}
+ main h1{
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 45px;
+  font-family: 'mainbold';
+}
+main #name{
+  width: 1150px;
+  height: 600px;
+  display: flex;
+  margin: 0 auto;
+  border: 2px solid #ccc;
+  border-radius: 20px;
+  margin-bottom: 30px;
+}
+#dogInfo div{
+  width: 600px;
+  height: 95px;
+  padding-left: 50px;
+  line-height: 100px;
+  font-size: 23px;
+  font-family: 'mainmedium';
+}
+#dogImage{
+  position: relative;
+}
+#like{
+  width: 60px;
+  height: 60px;
+  fill: #ccc;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  transition-duration: 0.2s;
+}
+
+hr{
+  border-color: rgb(42,66,38);
+  margin-bottom: 20px
+}
+
+#procedureAndPrecautions{
+  width: 1400px;
+  height: 800px;
+}
+#procedureAndPrecautions ul{
+  width: 1200px;
+  margin: 0 auto;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+}
+#procedureAndPrecautions ul li{
+  text-align: center;
+  height: 250px;
+  margin: 20px;
+  padding: 10px;
+  background-color: rgb(245,240,221);
+  background-color: rgba(42,66,38,0.1);
+  font-size: 20px;
+  font-family: 'mainmedium';
+  position: relative;
+}
+li img:not(#img2,#img5){
+  object-fit: cover;
+  width: 200px;
+  height: 130px;
+  margin: 10px 0;
+  margin-bottom: 25px;
+}
+li p{
+  margin: 0 auto;
+  margin-bottom: 100px;
+  width: 300px;
+}
+li span{
+  position: absolute;
+  font-size: 25px;
+  top: 5px;
+  left: 5px;
+  font-family: 'mainbold';
+  color: rgb(42,66,38);
+}
+
+#img2{
+  width: 150px;
+}
+#img5{
+  width: 160px;
+  object-fit: fill;
 }
