--- a/CSS/adopt2.css
+++ b/CSS/adopt2.css
@@ -123,7 +123,7 @@ main #name{
 #like{
   width: 60px;
   height: 60px;
-  fill: #ccc;
+  fill: white;
   position: absolute;
   bottom: 10px;
   right: 10px;
