--- a/CSS/adopt2.css
+++ b/CSS/adopt2.css
@@ -125,8 +125,8 @@ main #name{
   height: 60px;
   fill: white;
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 15px;
+  right: 15px;
   transition-duration: 0.2s;
 }
 
@@ -171,19 +171,21 @@ hr{
 }
 #procedure ul li p{
   margin: 0 auto;
+  line-height: 25px;
   margin-bottom: 100px;
   width: 300px;
 }
 #procedure ul li span{
   position: absolute;
   font-size: 25px;
-  top: 5px;
-  left: 5px;
+  top: 15px;
+  left: 15px;
   font-family: 'mainbold';
   color: rgb(42,66,38);
 }
 #img2{
-  width: 150px;
+  width: 160px;
+  height: 165px;
 }
 #img5{
   width: 160px;
@@ -206,10 +208,15 @@ hr{
   line-height: 80px;
   display: inline-block;
   margin: 0 40px;
+
 }
 #mainNav ul #no1{
   background-color: rgba(42,66,38);
   color: rgb(245,240,221);
+}
+#mainNav ul li h1{
+  font-size: 35px;
+  font-family: 'mainmedium';
 }
 
 #precautions{
@@ -225,13 +232,16 @@ hr{
   margin: 0 auto;
 }
 #precautions ul li p:first-child{
-  font-family: "mainbold";
+  font-family: "mainmedium";
   font-size: 25px;
   margin-bottom: 30px;
 }
 .sec{
-  font-family: 'mainmedium';
-  margin-left: 150px;
+  width: 970px;
+  text-align:justify;
+  line-height: 27px;
+  font-family: 'mainlight';
+  margin-left: 100px;
   font-size: 20px;
 }
 #precautions ul li{
