--- a/CSS/findDog2.css
+++ b/CSS/findDog2.css
@@ -108,19 +108,26 @@ article{
 }
 #mydogimg #image{
   position: absolute;
-  bottom: 15px;
-  left: 15px;
+  bottom: 20px;
+  left: 20px;
 }
-
+#findInfo div{
+  margin-bottom: 8px;
+}
 label{
   display: inline-block;
   width: 120px;
+  font-size: 17px;
 }
 .con{
   height: 28px;
   width: 250px;
   font-size: 18px;
 }
+#contents{
+  font-size: 20px;
+}
+
 #preview img{
   width: 546px;
   height: 596px;
@@ -144,5 +151,5 @@ label{
   width: 100px;
   height: 50px;
   position: absolute;
-  right: 50px;
+  right: 30px;
 }
