--- a/CSS/findDog.css
+++ b/CSS/findDog.css
@@ -1,93 +1,92 @@
 *{
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+/* 폰트 */
+@font-face {
+  font-family: 'mainlight';
+  src: url('GmarketSansTTFLight.ttf') format('truetype');
   }
-  
-  /* 폰트 */
-  @font-face {
-    font-family: 'mainlight';
-    src: url('GmarketSansTTFLight.ttf') format('truetype');
-    }
-  @font-face {
-    font-family: 'mainmedium';
-    src: url('GmarketSansTTFMedium.ttf') format('truetype');
-  }
-  @font-face{
-    font-family: 'mainmedium';
-    src: url('GmarketSansTTFMedium.ttf') format('truetype');
-  }
-  @font-face{
-    font-family: 'mainbold';
-    src: url('GmarketSansTTFBold.ttf') format('truetype');
-  }
-  @font-face{
-    font-family: 'dadoc';
-    src: url('Binggrae-Bold.ttf') format('truetype');
-  }
-  
-  body{
-    background-color: rgb(245,240,221);
-  }
-  header{
-    margin: 0 auto;
-    margin-top: 15px;
-    margin-bottom: 5%;
-    height: 50px;
-    width: 1400px;
-    display: flex;
-  }
-   header h1{
-    margin-top: 3px;
-    font-family: 'dadoc';
-    color: white;
-    text-shadow: -3px 0 rgb(42,66,38), 0 3px  rgb(42,66,38), 3px 0  rgb(42,66,38), 0 -3px  rgb(42,66,38);
-   }
-   header h1 a{
-    text-decoration: none;
-   }
-   header h1 a:visited{
-    color: white;
-   }
-   header h1 a:active { 
-    color:white; 
-  }
-  
-  /* 상단 메뉴nav 전체 */
-  header nav a{
-    margin: 0 25px;
-  }
-  
-  /* 상단 메뉴 중단 */
-  #menu ul{
-    margin: 0 auto;
-  }
-  #menu{
-    width: 950px;
-  }
-  #menu ul li{
-    display: inline-block;
-    color: rgb(42,66,38);
-    padding: 20px 25px;
-    font-size: 15px;
-    font-weight: bold;
-  }
-  /* 로그인 회원가입 부분 (오른쪽 상단 메뉴) */
-  /* 로그인 했을 시, 로그아웃 마이페이지로 바뀌도록 만들어야함 */
-  #sidetap ul li{
-    display: inline-block;
-    color: rgb(42,66,38);
-    padding: 20px 5px;
-    font-size: 15px;
-    font-weight: bold;
-  }
-  #sidetap ul{
-    width: 300px;
-    text-align: right;
-  } */
-  
-    
-    
-    /* 헤더 */
+@font-face {
+  font-family: 'mainmedium';
+  src: url('GmarketSansTTFMedium.ttf') format('truetype');
+}
+@font-face{
+  font-family: 'mainmedium';
+  src: url('GmarketSansTTFMedium.ttf') format('truetype');
+}
+@font-face{
+  font-family: 'mainbold';
+  src: url('GmarketSansTTFBold.ttf') format('truetype');
+}
+@font-face{
+  font-family: 'dadoc';
+  src: url('Binggrae-Bold.ttf') format('truetype');
+}
+
+body{
+  background-color: rgb(245,240,221);
+}
+header{
+  margin: 0 auto;
+  margin-top: 15px;
+  margin-bottom: 5%;
+  height: 50px;
+  width: 1400px;
+  display: flex;
+}
+ header h1{
+  margin-top: 3px;
+  font-family: 'dadoc';
+  color: white;
+  text-shadow: -3px 0 rgb(42,66,38), 0 3px  rgb(42,66,38), 3px 0  rgb(42,66,38), 0 -3px  rgb(42,66,38);
+ }
+ header h1 a{
+  text-decoration: none;
+ }
+ header h1 a:visited{
+  color: white;
+ }
+ header h1 a:active { 
+  color:white; 
+}
+
+/* 상단 메뉴nav 전체 */
+header nav a{
+  margin: 0 25px;
+}
+
+/* 상단 메뉴 중단 */
+#menu ul{
+  margin: 0 auto;
+}
+#menu{
+  width: 950px;
+}
+#menu ul li{
+  display: inline-block;
+  color: rgb(42,66,38);
+  padding: 20px 25px;
+  font-size: 15px;
+  font-weight: bold;
+}
+/* 로그인 회원가입 부분 (오른쪽 상단 메뉴) */
+/* 로그인 했을 시, 로그아웃 마이페이지로 바뀌도록 만들어야함 */
+#sidetap ul li{
+  display: inline-block;
+  color: rgb(42,66,38);
+  padding: 20px 5px;
+  font-size: 15px;
+  font-weight: bold;
+}
+#sidetap ul{
+  width: 300px;
+  text-align: right;
+} */
+
+/* 헤더 */
+
   
   
   /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ메인ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ   */
@@ -126,20 +125,26 @@
       text-align: left;
       font-size: x-large;
       color: rgb(42, 66, 38);
-      border: 1px dashed rgb(42, 66, 38);
       width: 1140px;
-      height: 60px;
-      padding: 50px;
-      padding-top: 20px;
-      padding-left: 120px; /* 조정할 값 설정 */
-      margin: 10px auto; 
-      background-color: #fff;
-      background-image: url(/img/notice2.jpeg);
-      background-size: 71px auto;
-      background-repeat: no-repeat;
-      background-position: 20px center;
+      margin: 0 auto; 
+      background-color: rgb(245,240,221);
+      padding: 0 120px; /* 상하 padding 20px, 좌우 padding 120px */
       font-family: "mainlight";
-      
+      background-size: 71px auto;
+      background-position: 20px center;
+  }
+
+  .hc li {
+      margin-bottom: 5px; /* 리스트 항목 사이의 간격 조정 */
+  }
+
+  .hc a {
+      color: rgb(42, 66, 38);
+      text-decoration: none;
+  }
+  
+  .hc a:hover {
+      text-decoration: underline;
   }
   
   a {
@@ -151,17 +156,18 @@
   .containerr {
     max-width: 1260px;
     margin: 5px auto; /* 수평 중앙 정렬을 위한 margin */
-    background-color: #f2f2f2;
+    background-color: rgb(245,240,221);
     padding: 15px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgb(42, 66, 38);
+    /* box-shadow: 0 0 10px rgb(42, 66, 38); */
     height: 300px;
     display: inline-block; 
     vertical-align: top; 
+    border: 1px dashed rgb(42, 66, 38);
   }
   
   .search-form {
-    background-color: #fff;
+    background-color: rgb(245,240,221);
     padding: 25px;
     border-radius: 8px;
     box-shadow: 0 0 5px rgb(245,240,221);
@@ -198,6 +204,7 @@
     font-size: 16px;
     border: 1px solid rgb(42, 66, 38);
     border-radius: 10px;
+    background-color: rgb(245,240,221);
     /* box-sizing: border-box; */
   }
   
@@ -232,10 +239,12 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+   
   }
   
   .input-group select::-ms-expand {
     display: none;
+    
   }
   
   /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
@@ -260,10 +269,10 @@
       display: grid;
       grid-template-columns: repeat(4, 310px);
       gap: 20px;
-      width: 1340px;
+      width: 1300px;
       margin: 0 auto; 
       padding: 20px;
-      background-color: rgb(245,240,221);
+      background-color: rgb(42, 66, 38);
       border-radius: 20px;
       transform: translateX(-40px); /* 왼쪽으로 -40px 이동 */
   }
@@ -273,7 +282,7 @@
   .gallery-item {
       position: relative;
       overflow: hidden;
-      border: 5px solid rgb(42, 66, 38);
+      border: 5px solid rgb(245,240,221);
       transition: transform 0.3s ease;
       border-radius: 10px;
       box-sizing: border-box;
