성현 : 파일 정리

--- a/CSS/findDog.css
+++ b/CSS/findDog.css
@@ -147,7 +147,7 @@ header nav a{
       text-decoration: underline;
   }
   
-  a {
+  .hc a {
       text-decoration-line: none;
       font-family: "mainmedium";
   }
