--- a/CSS/boho.css
+++ b/CSS/boho.css
@@ -27,7 +27,6 @@
 
 body{
   background-color: rgb(245,240,221);
-  
 }
 header{
   margin: 0 auto;
@@ -73,7 +72,7 @@ header nav a{
   font-weight: bold;
 }
 /* 로그인 회원가입 부분 (오른쪽 상단 메뉴) */
-/* 로그인 했을 시, 로ㄴ그아웃 마이페이지로 바뀌도록 만들어야함 */
+/* 로그인 했을 시, 로그아웃 마이페이지로 바뀌도록 만들어야함 */
 #sidetap ul li{
   display: inline-block;
   color: rgb(42,66,38);
@@ -84,7 +83,7 @@ header nav a{
 #sidetap ul{
   width: 300px;
   text-align: right;
-} */
+}
 
 
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ헤더ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
@@ -186,7 +185,7 @@ hr {
   margin: 5px auto;
 }
 
-a {
+.hc a{
   text-decoration-line: none;
   font-family: "mainmedium";
   cursor: pointer;
