석현 : findDog html,css,js 및 bohohtml,css 수정

--- a/CSS/boho.css
+++ b/CSS/boho.css
@@ -26,6 +26,7 @@
 }
 
 body{
+  
   background-color: rgb(245,240,221);
 }
 header{
@@ -83,7 +84,9 @@ header nav a{
 #sidetap ul{
   width: 300px;
   text-align: right;
-}
+} */
+
+
 
 
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ헤더ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
@@ -154,35 +157,32 @@ header nav a{
   text-align: center;
   font-size: xx-large;
   font-family: "mainmedium";
-  margin-bottom: 30px;
+
   
 }
 
 .hc {
-  font-family: 'mainlight';
+  text-align: left;
   font-size: x-large;
   color: rgb(42, 66, 38);
   width: 1140px;
-  height: 75px;
-  padding: 50px;
-  padding-top: 20px;
-  padding-left: 120px;
-  margin: 10px auto;
+  margin: 0 auto; 
+  background-color: rgb(245,240,221);
+  padding: 0 120px; /* 상하 padding 20px, 좌우 padding 120px */
+  font-family: "mainlight";
   background-size: 71px auto;
-  background-repeat: no-repeat;
   background-position: 20px center;
-  text-align: left;
 }
+
 
 .hc li {
-  margin-bottom: 5px; /* 항목 간의 간격 조정 */
+  margin-bottom: 5px; /* 리스트 항목 사이의 간격 조정 */
 }
-
 
 
 hr {
   width: 1350px; /* 원하는 길이로 조절 */
-  margin: 5px auto;
+  margin: 20px auto;
 }
 
 .hc a{
@@ -194,27 +194,36 @@ hr {
 
 
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
+.main {
+  font-family: "mainmedium";
+  margin: 0;
+  padding: 0;
+  background-color: rgb(245, 240, 221);
+  display: flex;
+  flex-direction: column; /* flex-direction을 column으로 설정하여 세로 정렬을 보장합니다. */
+  justify-content: center; 
+  align-items: center; 
+  min-height: 100vh; /* 화면 전체 높이를 차지하도록 설정 */
+  text-align: center; /* 모든 텍스트를 중앙 정렬 */
+}
+
 .containerr {
   max-width: 1260px;
-  margin: 5px auto; /* 수평 중앙 정렬을 위한 margin */
-  background-color: rgb(245,240,221);
+  margin: 10px auto;
+  background-color: rgb(245, 240, 221);
   padding: 15px;
   border-radius: 8px;
-  /* box-shadow: 0 0 10px rgb(42, 66, 38); */
-  height: 300px;
-  display: inline-block; 
-  vertical-align: top; 
-  border: 1px dashed rgb(42, 66, 38);
+  /* border: 1px dashed rgb(42, 66, 38); */
 }
 
 .search-form {
-  background-color: rgb(245,240,221);
-  padding: 25px;
+  background-color: rgb(245, 240, 221);
+  padding: 20px; /* 패딩을 줄여서 form의 크기를 줄입니다. */
   border-radius: 8px;
-  box-shadow: 0 0 5px rgb(245,240,221);
-  margin-bottom: 20px;
+  box-shadow: 0 0 5px rgb(245, 240, 221);
+  margin-bottom: 20px; /* 여백을 조정하여 form과 다른 요소 간의 간격을 조절합니다. */
   text-align: left;
-  
+  border: 1px dashed rgb(42, 66, 38); /* form에 맞게 border 스타일을 조정합니다. */
 }
 
 .input-row {
@@ -292,11 +301,6 @@ hr {
 
 
 /* 갤러리 스타일 */
-
-body {
-  text-align: center; /* 중앙 정렬을 위해 text-align 사용했음*/
-  
-}
 
 
 .gallery-container {
