--- a/CSS/boho.css
+++ b/CSS/boho.css
@@ -297,6 +297,15 @@ hr {
   
 }
 
+.input-group input[type="date"] {
+  width: 1203px; 
+  padding: 7px;
+  font-size: 16px;
+  border: 1px solid rgb(42, 66, 38);
+  border-radius: 10px;
+  background-color: rgb(245,240,221);
+}ㄴ
+
 /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ */
 
 
