--- a/CSS/findDog3.css
+++ b/CSS/findDog3.css
@@ -92,7 +92,7 @@ header nav a{
 }
 main{
   width: 1400px;
-  margin: 0 auto 50px;
+  margin: 0 auto;
 }
  main h1{
   text-align: center;
@@ -101,15 +101,13 @@ main{
   font-family: 'mainbold';
 }
 #dogImage{
-  height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 400px;
+  margin: 0 400px;
   border-radius: 20px;
   margin-bottom: 30px;
 }
 #dogImage img {
-  height: 500px;
+  height: 400px;
 }
 #dogInfo{
   display: flex;
@@ -120,38 +118,29 @@ main{
   line-height: 100px;
   font-size: 23px;
   font-family: 'mainmedium';
-  border: 2px solid rgb(42,66,38);
-  border-radius: 20px;
 }
 #infoLeft {
-  margin: 0;
-  width: 600px;
-}
-#infoLeft #leftTitle {
-  text-align: center;
-  font-weight: bold;
-  font-size: 30px;
-  background-color: rgb(42,66,38);
-  color: white;
-  border-top-left-radius: 17px;
-}
-#information1 {
   padding-left: 50px;
-  border-right: 2px solid rgb(42,66,38);
+  margin-right: 20px;
+  border: 2px solid #ccc;
+  border-radius: 20px;
+  width: 600px;
 }
 #infoRight {
   margin: 0;
   width: 600px;
+  border: 2px solid #ccc;
+  border-radius: 20px;
 }
 #infoRight #rightTitle {
   text-align: center;
   font-weight: bold;
   font-size: 30px;
-  background-color: rgb(42,66,38);
-  color: white;
+  background-color: #ccc;
+  border: 2px solid #ccc;
   border-top-right-radius: 17px;
-  border-left: 2px solid rgb(245,240,221);
+  border-top-left-radius: 17px;
 }
-#characteristic {
+#infoRight #characteristic {
   padding-left: 50px;
 }
