진비 : 찜목록 수정중

--- a/CSS/wishList.css
+++ b/CSS/wishList.css
@@ -93,17 +93,20 @@ main{
   margin: 0 auto;
   height: 75vh;
 }
-/* 메인 제목 */
-main h1 {
-  font-family: 'mainbold';
-  font-size: 45px;
+.tab_menu{
+  position:relative;
+}
+#wishList {
+  width: 100%;
 }
 /* 찜목록 전체 */
 #wishlistContainer {
   font-family: 'mainmedium';
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 한줄에 3개씩 */
-  padding: 10px;
+  position:absolute; 
+  top: 50px; 
+  left:0;
 }
 /* 찜목록 하나 */
 .dog-card {
